# gspcoin

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  build.properties  build.sh  configure.ac  dockerfile  libgspcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-qt.yaml  build.yaml
.tx/: config
ci/: Dockerfile.builder  build_src.sh  matrix.sh  test_integrationtests.sh  test_unittests.sh
contrib/: README.md  gitian-build.py  gspcoin-cli.bash-completion  gspcoin-qt.pro  gspcoin-tx.bash-completion  gspcoind.bash-completion  valgrind.supp
depends/: README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-cross.md  build-generic.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  instantsend.md  keepass.md  reduce-traffic.md  release-process.md  shared-libraries.md  smartnode-budget.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  zmq.md
docker/: Dockerfile  Dockerfile.GitHubActions  README.md  build-docker.sh  push-docker.sh
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  arith_uint256.h  batchedlogger.cpp  batchedlogger.h  bip39_english.h  cachemap.h  cachemultimap.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  clientversion.cpp  clientversion.h  coins.h  compat.h  dsnotificationinterface.cpp  flat-database.h  founder_payment.cpp  founder_payment.h  gspcoin-cli-res.rc  gspcoin-cli.cpp  gspcoin-tx-res.rc  gspcoin-tx.cpp  gspcoind-res.rc  gspcoind.cpp  hash.h  hash_selection.cpp  hash_selection.h  hdchain.cpp  hdchain.h  httpserver.cpp  init.cpp  init.h  keepass.cpp  keepass.h  (+31 more)
test/: README.md
utils/: build-debian-package.sh  build.sh  clean.sh  cleanup-tags.sh  fetch-params.sh
(+451 files in other folders)
